--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.7.1",
     "@tanstack/react-query": "^5.17.1",
     "axios": "^1.6.4",
+    "migrate": "^2.0.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
